Used 'Cover' layout from Bootstrap

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,12 @@
-<h1>About Us</h1>
-<p>We are working on our One Month Rails Pinteresting app</p>
+<div class="inner cover">
+    <h1 class="cover-heading">About Us.</h1>
+
+    <p class="lead">We are gonna go into beast mode.
+
+    <p class="lead"><a class="btn btn-lg btn-info" href="#">Learn
+    more</a></p>
+</div>
+    
+
+      
+    
