--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,24 @@
-<h1>Welcome to my app!</h1>
-<p>Sign up <%= link_to "here", "#" %>.</p>
+<!--
+<div class="jumbotron center">
+     <h1>Welcome to DI.</h1>
+     <p>
+       <%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+       <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
+  </p>    
+</div>
+//-->
+
+<div class="inner cover">
+    <h1 class="cover-heading">Welcome to DI.</h1>
+
+    
+
+    
+
+    <p>
+       <%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+       <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
+  </p>
+
+</div>
+      
