Devise working, no Heroku

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,5 @@
+<%
+=begin %>
 <div class="mastfoot">
     <div class="inner">
       <!-- Validation -->
@@ -11,3 +13,5 @@
       "http://getbootstrap.com/">Bootstrap</a></p>
     </div>
 </div>
+<%
+=end %>
