--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,19 +8,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	 <div class="site-wrapper">
-    <div class="site-wrapper-inner">
-      <div class="cover-container">
+	 
 		    <%= render 'layouts/header' %>
     
 
     <div class="cover-container">
+        <% flash.each do |name, msg| %>
+        <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+          <% end %>
     	<%= yield %>
     </div>
+    <!-- 
     <%= render 'layouts/footer' %>
-    </div>
-</div>
-</div>
+    //-->
+    
 
 </body>
 </html>
