--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,11 +1,35 @@
-<div class="inner cover">
-    <h1 class="cover-heading">About Us.</h1>
+<div class="jumbotron center">
+     
+    
+       <div class="inner cover">
+    <h1 class="cover-heading">DailyInsure Mission Statement.</h1>
 
-    <p class="lead">We are gonna go into beast mode.
+    <p class="lead">Strive to give Daily Fantasy Players the protection they need and deserve from injury plagued contests.
 
-    <p class="lead"><a class="btn btn-lg btn-info" href="#">Learn
-    more</a></p>
+<h1 class="cover-heading">Why.</h1>
+
+    	<p class="lead">Every athlete on a roster is so important if one of them goes down with an injury early in the game, more often than not you will have a losing night. 
+
+<h1 class="cover-heading">How it works.</h1>
+
+
+    		<p class="lead">With our software a Daily Fantasy Player will have the option of buying injury insurance for a fraction of their buy in. It would also protect against an “Act of God” i.e. Weather, social protest,etc. For example, if you are playing an MLB contest and your pitcher is playing in a game that gets rained out you would be refunded your entire contest buy in. That is, if you wisely chose to purchase the insurance.  There will be options to purchase full team insurance or just single player insurance. Prices of whole team insurance would cost more than single player but the result would remain the same. Full refund of the contest(s) entered.
+
+    	<h1 class="cover-heading">Importance.</h1>
+
+
+    	<p class="lead">Not only would Daily Fantasy Players benefit from this software, so to would the Daily Fantasy sites. No longer would players fear a large buy in contest because they are weary about one of their star players going down with injury early in the game. When a player buys insurance and one of their players goes down, DailyInsure will refund their account with a ticket for the amount of their buy in. This will provide the player with another chance to play in the contest. Not only will the site get “rake” from their first buy in, they will get “rake” from their second buyin as well. This is great incentive for Daily Fantasy sites to utilize our software. It’s great for the players as well as the sites. 
+
+    <p class="lead"><%= link_to "About Us", about_path, class: "btn btn-primary btn-lg" %></p>
 </div>
+     
+</div>
+
+
+
+
+
+
     
 
       
