--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,4 @@
-<!--
-
-  <nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
     <div class="container">
       
       <div class="navbar-header">
@@ -16,15 +14,27 @@
       
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "About", about_path %></li> 
-        </ul>
+        <li><%= link_to "Home", root_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to "About", about_path %></li>
+           <li><%= link_to "Account Settings", edit_user_registration_path %></li>
+          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Sign in", new_user_session_path %></li>
+        <% end %>
+    </ul>
       </div>
     </div>
   </nav>
-//-->
 
 
+
+
+<!--
+
+<div class="site-wrapper">
+    <div class="site-wrapper-inner">
+      <div class="cover-container">
 <div class="masthead clearfix">
   <div class="inner">
    
@@ -35,10 +45,19 @@
       <%= link_to_in_li "Home", root_path, id: "home_link" %>
 
       <%= link_to_in_li "About", about_path, id: "about_link" %>
+      
+      <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+      <li><%= link_to "Account Settings", edit_user_registration_path %></li>
+    
 
       
     </ul>
   </div>
 </div>
+</div>
+</div>
+</div>
+//-->
+
 
       
