--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -35,7 +35,7 @@ a:hover {
 html,
 body {
 /*css for full size background image*/
-  background-image: image-url('/images/tiburon.jpg'); 
+  background-image: image-url('tiburon.jpg'); 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
